--- a/src/app/views/seller-account/dashboard/dashboard.html
+++ b/src/app/views/seller-account/dashboard/dashboard.html
@@ -1,5 +1,5 @@
 <div id="dashboard" class="tab-pane fade in active col-padding-small col-padding-sm">
-	<h1 class="no-margin skin-color seller-heading-font">Hi {{ user.fullname }}, Welcome to your Seller Dashboard!</h1>
+	<h1 class="no-margin black-color seller-heading-font">Hi {{ user.fullname }}, Welcome to your Seller Dashboard!</h1>
 	<p>All your seller profile and setting will appear here and you'll be able to manage everything!</p>
 	<br />
 	<div class="row block">
@@ -14,7 +14,7 @@
 						<i class="fa fa-calendar-check-o"></i>
 					</div>
 					<div class="description">
-						<i class="icon soap-icon-longarrow-right"></i>
+						<i class="icon fa fa-long-arrow-right"></i>
 						<span>View History</span>
 					</div>
 				</div>
@@ -31,7 +31,7 @@
 						<i class="fa fa-map-marker"></i>
 					</div>
 					<div class="description">
-						<i class="icon soap-icon-longarrow-right"></i>
+						<i class="icon fa fa-long-arrow-right"></i>
 						<span>Manage Jobsites</span>
 					</div>
 				</div>
@@ -48,7 +48,7 @@
 						<i class="fa fa-heart-o"></i>
 					</div>
 					<div class="description">
-						<i class="icon soap-icon-longarrow-right"></i>
+						<i class="icon fa fa-long-arrow-right"></i>
 						<span>View Favourited</span>
 					</div>
 				</div>
@@ -65,7 +65,7 @@
 						<i class="fa fa-file-o"></i>
 					</div>
 					<div class="description">
-						<i class="icon soap-icon-longarrow-right"></i>
+						<i class="icon fa fa-long-arrow-right"></i>
 						<span>Manage Requests</span>
 					</div>
 				</div>
@@ -74,13 +74,13 @@
 	</div>
 	<div class="row block">
 		<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-			<h2 class="heading-text">Upcoming Equipments Bookings</h2>
+			<h2 class="heading-text black-color">Upcoming Equipments Bookings</h2>
 			<div class="recent-activity">
 				<ul>
 					<li>
 						<a>
 							<i class="icon soap-icon-shopping-2 circle takeoff-effect yellow-color"></i>
-							<span class="price"><small>You paid</small>$120</span>
+							<span class="price"><small>You paid</small><span class="bold-font">$120</span></span>
 							<h4 class="box-title">
 								Caterpillar Pickup Crane<small>in 2 days</small>
 							</h4>
@@ -89,7 +89,7 @@
 					<li>
 						<a>
 							<i class="icon soap-icon-shopping-2 circle red-color"></i>
-							<span class="price"><small>per day</small>$45.39</span>
+							<span class="price"><small>per day</small><span class="bold-font">$45.39</span></span>
 							<h4 class="box-title">
 								Caterpillar Pickup Crane<small>in 2 days</small>
 							</h4>
@@ -98,7 +98,7 @@
 					<li>
 						<a>
 							<i class="icon soap-icon-shopping-2 circle green-color"></i>
-							<span class="price"><small>from</small>$578</span>
+							<span class="price"><small>from</small><span class="font-bold">$578</span></span>
 							<h4 class="box-title">
 								Caterpillar Pickup Crane<small>in 2 days</small>
 							</h4>
@@ -107,7 +107,7 @@
 					<li>
 						<a>
 							<i class="icon soap-icon-shopping-2 circle blue-color"></i>
-							<span class="price"><small>Avg/night</small>$620</span>
+							<span class="price"><small>Avg/night</small><span class="bold-font">$620</span></span>
 							<h4 class="box-title">
 								Caterpillar Pickup Crane<small>in 2 days</small>
 							</h4>
@@ -116,7 +116,7 @@
 					<li>
 						<a>
 							<i class="icon soap-icon-shopping-2 circle red-color"></i>
-							<span class="price"><small>per day</small>$45.39</span>
+							<span class="price"><small>per day</small><span class="bold-font">$45.39</span></span>
 							<h4 class="box-title">
 								Caterpillar Pickup Crane<small>in 2 days</small>
 							</h4>
@@ -125,18 +125,18 @@
 					<li>
 						<a>
 							<i class="icon soap-icon-shopping-2 circle green-color"></i>
-							<span class="price"><small>from</small>$578</span>
+							<span class="price"><small>from</small><span class="bold-font">$578</span></span>
 							<h4 class="box-title">
 								Caterpillar Pickup Crane<small>in 2 days</small>
 							</h4>
 						</a>
 					</li>
 				</ul>
-				<a class="btn all-btn primary-btn full-width">VIEW ALL BOOKINGS</a>
+				<a class="btn all-btn white-btn full-width">VIEW ALL BOOKINGS</a>
 			</div>
 		</div>
 		<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 seller-dash-noti notifications">
-			<h2 class="heading-text">Notifications</h2>
+			<h2 class="heading-text black-color">Notifications</h2>
 			<div class="recent-activity recent-activity-div">
 				<a>
 					<div class="icon-box style1 fourty-space">
