--- a/src/app/views/seller-account/invoices/edit/edit.html
+++ b/src/app/views/seller-account/invoices/edit/edit.html
@@ -1,6 +1,8 @@
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding booking-information travelo-box invoice-details" style="margin-bottom: 0px;">
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 invoices-edit-btn-col no-padding">
-		<button class="btn all-btn primary-btn pull-left" ui-sref="main.sellerAccount.invoices.list">Back to Invoice List</button>
+		<button class="btn all-btn primary-btn pull-left" ui-sref="main.sellerAccount.invoices.list">
+			<i class="fa fa-chevron-left"></i> &nbsp
+			Back to Invoice List</button>
 		<button class="btn all-btn primary-btn pull-right btn-right">Cancel</button>
 		<button class="btn all-btn primary-btn pull-right">Save Invoice</button>
 	</div>
@@ -9,7 +11,7 @@
 	</div>
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding term-description">
 		<p class="hotel-color no-margin">Order number: &nbsp
-			<span class="no-margin">1234567890</span>
+			<span class="no-margin bold-font">1234567890</span>
 		</p>
 	</div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
@@ -58,7 +60,7 @@
 				</div>
 			</div>
 			<div class="col-lg-1 col-md-1 col-sm-2 col-xs-12 product-name pull-center product-name-xs">
-				<h4>$1200</h4>
+				<h4 class="bold-font">$1200</h4>
 			</div>
 		</div>
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 cart-total invoice-cart-total">
@@ -68,12 +70,12 @@
 				</div>
 			</div>
 			<div class="col-lg-3 col-md-3 col-sm-4 col-xs-12 add-cost">
-				<p>Shipping Cost <span class="pull-right">$50</span></p>
-				<p>Overusage <span class="pull-right">$215</span></p>
-				<p>Additional <span class="pull-right">$234</span></p>
+				<p>Shipping Cost <span class="pull-right bold-font">$50</span></p>
+				<p>Overusage <span class="pull-right bold-font">$215</span></p>
+				<p>Additional <span class="pull-right bold-font">$234</span></p>
 			</div>
 			<div class="col-lg-3 col-md-3 col-sm-4 col-xs-12 total-cost">
-				<div>
+				<div class="bold-font">
 					$2209
 				</div>
 			</div>
