--- a/src/app/views/seller-account/settings/settings.html
+++ b/src/app/views/seller-account/settings/settings.html
@@ -1,5 +1,5 @@
-<div id="settings" class="tab-pane col-lg-12 col-md-12 col-sm-12 col-xs-12">
-	<h1 class="no-margin skin-color seller-heading-font">Account Settings</h1>
+<div id="settings" class="tab-pane col-lg-12 col-md-12 col-sm-12 col-xs-12" style="min-height: auto;">
+	<h1 class="no-margin black-color seller-heading-font">Account Settings</h1>
 </div>
 <div class="settings col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
 	<hr />
