--- a/src/app/style/sass/responsive.scss
+++ b/src/app/style/sass/responsive.scss
@@ -512,6 +512,15 @@
       display: inline-block !important;
     }
   }
+  section {
+    &#content {
+      padding-bottom: 20px !important;
+    }
+  }
+
+  #main {
+    margin-bottom: 0 !important;
+  }
 }
 
 /* 6. Styles for devices(>=768px and <= 991px) */
@@ -531,6 +540,31 @@
   .for-sm {
     i,h4 {
       font-size: 16px !important
+    }
+  }
+  .equipments-table {
+    > tbody {
+      > tr {
+        > td {
+          &.time-td {
+            width: 40%;
+            vertical-align: initial;
+          }
+          &.action-td {
+            text-align: left !important;
+          }
+          a {
+            margin-right: 0 !important;
+            margin-bottom: 4px;
+          }
+        }
+      } 
+    }
+  }
+
+  .total-amount-col {
+    .total-amount-pay {
+      padding-right: 5% !important;
     }
   }
 }
@@ -986,6 +1020,36 @@
 
   .billing {
     margin-top: 10px;
+  }
+
+  .seller-mobile-equip {
+    .all-btn {
+      min-width: 70px !important;
+    }
+  }
+
+  .invoice-details-col {
+    border: 1px solid $primary-border-color;
+  }
+  .loader-div {
+    position: fixed !important;
+    z-index: 1;
+    top: 0;
+    bottom: 0;
+    text-align: center;
+    background: rgba(255, 255, 255, 0.5);
+    height: 100%;
+    margin-left: 0px !important;
+    padding-top: 0 !important;
+    margin-top: 0 !important;
+    left: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .invoice-cart-total {
+    margin: 0 !important;
   }
 }
 
