--- a/src/app/views/account/orders/view/view.html
+++ b/src/app/views/account/orders/view/view.html
@@ -145,18 +145,18 @@
 			<h4 class="bold-font">${{item.subtotal | number}}</h4>
 		</div>
 	</div>
-	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding devider-solid no-margin"></div>
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding devider-solid no-margin hidden-xs"></div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 cart-total invoice-cart-total">
 		<div class="col-lg-6 col-md-6 col-sm-4 col-xs-12">
 			<div class="description">
 				<h4 style="margin-top: 15px;">Order Total</h4>
 			</div>
 		</div>
-		<div class="col-lg-3 col-md-3 col-sm-4 col-xs-12 add-cost">
+		<div class="col-lg-3 col-md-3 col-sm-5 col-xs-12 add-cost">
 			<p>Shipping Cost <span class="pull-right bold-font">${{mdl.order.shipping_charge | number}}</span></p>
 			<p>Additional Charges<span class="pull-right bold-font">${{mdl.order.shipping_charge | number}}</span></p>
 		</div>
-		<div class="col-lg-3 col-md-3 col-sm-4 col-xs-12 total-cost" style="margin-top: 15px;">
+		<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 total-cost" style="margin-top: 15px;">
 			<div class="bold-font">
 				${{mdl.order.total | number}}
 			</div>
