--- a/src/app/views/cart/cart.html
+++ b/src/app/views/cart/cart.html
@@ -112,8 +112,8 @@
 						</td>
 						<td class="description-td">
 							<h4 style="color: #2d3e52">${{item.cost_breakup.subtotal.prices.hourly_price * item.cost_breakup.subtotal.rent_period.final.hours}}</h4>
-							<p>Shipping: ${{item.cost_breakup.shipping.amt}}</p>
-							<p>Additional: ${{item.cost_breakup.additional_charge[0].amt}}</p>
+							<p>Shipping: <span class="bold-font">${{item.cost_breakup.shipping.amt}}</span></p>
+							<p>Additional: <span class="bold-font">${{item.cost_breakup.additional_charge[0].amt}}</span></p>
 							<p></p>
 						</td>
 						<td class="details-td">
@@ -126,7 +126,7 @@
 						</td>
 						<td class="cost-td">
 
-							<h4>${{item.cost_breakup.subtotal.amt}}</h4>
+							<h4 class="bold-font">${{item.cost_breakup.subtotal.amt}}</h4>
 							<!-- <p>Shipping: <span class="pull-right">${{item.cost_breakup.additional_charge[0].amt}}</span></p> -->
 							<!-- <p>Additional: <span class="pull-right">${{item.cost_breakup.shipping.amt}}</span></p> -->
 							<!-- <p>Estimated Rent: <span class="pull-right">${{item.cost_breakup.subtotal.amt}}</span></p> -->
@@ -151,7 +151,7 @@
 						</p>
 					</div>
 					<div class="col-xs-12 no-padding">
-						<p class="no-margin">
+						<p class="no-margin bold-font">
 							Operation: Rented
 						</p>
 						<p class="bold-font" style="margin-bottom: 5px;">Quantity:
@@ -171,20 +171,20 @@
 					<div class="col-xs-12 no-padding">
 						<div class="col-xs-4 price-col-mobile">
 							<p>Cost</p>
-							<h3>${{item.cost_breakup.subtotal.amt}}</h3>
+							<h3 class="bold-font">${{item.cost_breakup.subtotal.amt}}</h3>
 						</div>
 						<div class="col-xs-4 price-col-mobile">
 							<p>Shipping</p>
-							<h3>${{item.cost_breakup.shipping.amt}}</h3>
+							<h3 class="bold-font">${{item.cost_breakup.shipping.amt}}</h3>
 						</div>
 						<div class="col-xs-4 price-col-mobile">
 							<p>Additional</p>
-							<h3>${{item.cost_breakup.additional_charge[0].amt}}</h3>
+							<h3 class="bold-font">${{item.cost_breakup.additional_charge[0].amt}}</h3>
 						</div>
 					</div>
 					<div class="col-xs-12 devider"></div>
 					<div class="col-xs-12 no-padding estim-rate">
-						<p>Estimated Rent: <span class="pull-right">${{item.cost_breakup.subtotal.amt}}</span></p>
+						<p class="no-margin">Estimated Rent: <span class="pull-right bold-font">${{item.cost_breakup.subtotal.amt}}</span></p>
 					</div>
 					<div class="col-xs-12 devider"></div>
 					<div class="col-xs-12 no-padding action pull-center cart-action">
@@ -195,15 +195,14 @@
 					</div>
 				</div>
 			</article>
-			<div class="col-xs-12 devider"></div>
 		</div>
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" ng-if="rmodel.cartCount > 0">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding total-amount-col">
-				<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 col-lg-offset-8 col-md-offset-8 col-sm-offset-8 col-xs-offset-8 total-amount-pay">
-					<p class="text-left">Shipping Cost: <span class="pull-right">$123</span></p>
-					<p class="text-left">Additional Charges: <span class="pull-right">$123</span></p>
+				<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col-lg-offset-8 col-md-offset-8 col-sm-offset-8 total-amount-pay">
+					<p class="text-left">Shipping Cost: <span class="pull-right bold-font">$123</span></p>
+					<p class="text-left">Additional Charges: <span class="pull-right bold-font">$123</span></p>
 					<div class="devider-solid"></div>
-					<p class="text-left">Amount Payable: &nbsp<span class="pull-right">${{mdl.total}}</span></p>
+					<p class="text-left">Amount Payable: &nbsp<span class="pull-right bold-font">${{mdl.total}}</span></p>
 				</div>
 			</div>
 		</div>
