--- a/src/app/views/seller-account/equipments/add/add.html
+++ b/src/app/views/seller-account/equipments/add/add.html
@@ -3,7 +3,7 @@
 </div>
 <div class="add-equipment col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding add-equip-col">
 	<form validate-form name="addEquiMdl.form" novalidate ng-submit="updateProfile()" class="edit-profile-form buyer-add-jobsite">
-		<h1 class="no-margin skin-color seller-heading-font">{{editMode ? 'Edit Equipment' :'Add New Equipment'}}</h1>
+		<h1 class="no-margin black-color seller-heading-font">{{editMode ? 'Edit Equipment' :'Add New Equipment'}}</h1>
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
 			<hr>
 		</div>
@@ -173,7 +173,7 @@
 		</div>
 		<hr>
 		<div class="from-group block text-right">
-			<button class="btn all-btn secondary-btn" ui-sref="main.sellerAccount.equipments.list">Cancel</button>
+			<button class="btn all-btn primary-btn" ui-sref="main.sellerAccount.equipments.list">Cancel</button>
 			<button type="submit" class="btn all-btn primary-btn" ng-click="add()">{{editMode ? 'Save' : 'Add Equipment'}}</button>
 		</div>
 	</form>
