--- a/src/app/views/seller-account/equipments/list/list.html
+++ b/src/app/views/seller-account/equipments/list/list.html
@@ -2,7 +2,7 @@
     <img src="assets/images/loader.gif" style="height: 40px; width:40px"/>
 </div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 seller-header no-padding">
-		<h1 class="no-margin skin-color seller-heading-font">My Equipments
+		<h1 class="no-margin black-color seller-heading-font">My Equipments
 			<div class="visible-xs">
 				<div class="pull-right mobile-icons">
 					<i class="fa fa-search orange-color pull-right" ng-click="mobilesearchBar()" style="margin-top: -20px; margin-right: 0px;"></i>
@@ -18,7 +18,7 @@
 			</div>
 		</h1>
 	</div>
-	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 gray-area select-filter">
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 gray-area select-filter" ng-if="listEquiMdl.products">
 		<form>
 				<label class="radio radio-inline" ng-class="{'checked':listEquiMdl.filter=='all'}" ng-click="listEquiMdl.updateFilter('all')">
 					<input type="radio" name="filter" />
@@ -46,7 +46,7 @@
 					<td class="equip-desc">
 						<h3 ui-sref="main.equiDetails({id:pro.id})">{{pro.name}}</h3>
 						<p>{{pro.location.city.name}},{{pro.location.state.name}}</p>
-						<p>ID: xxxxxxxx</p>
+						<p>ID: <span class="bold-font">xxxxxxxx</span></p>
 					</td>
 					<td class="time-td">
 						<h3 class="time-util">Time Utilization: 47%</h3>
@@ -55,13 +55,13 @@
 					<td class="text-right action-td">
 						<p>
 							<!-- <button class="btn all-btn primary-btn">View</button> -->
-							<a ui-sref="main.equiDetails({id:pro.id})" class="btn small-btn secondary-btn">
+							<a ui-sref="main.equiDetails({id:pro.id})" class="btn all-btn white-btn">
 								View
 							</a>
-							<a ng-click="edit(pro)" class="btn small-btn secondary-btn">
+							<a ng-click="edit(pro)" class="btn all-btn white-btn">
 								Edit
 							</a>
-							<a ng-click="delete(pro)" class="btn small-btn secondary-btn">
+							<a ng-click="delete(pro)" class="btn all-btn white-btn">
 								Delete
 							</a>
 						</p>
@@ -83,7 +83,7 @@
 					<div class="col-xs-12 no-padding amenities">
 						<p class="no-margin">
 							{{pro.location.city.name}},{{pro.location.state.name}}
-							<span class="pull-right">
+							<span class="pull-right bold-font">
 								ID: xxxxxxxx
 							</span>
 						</p>
@@ -100,13 +100,13 @@
 					</div>
 					<div class="col-xs-12 devider"></div>
 					<div class="col-xs-12 no-padding action pull-center cart-action">
-						<a class="btn small-btn secondary-btn pull-left" ui-sref="main.equiDetails({id:pro.id})">
+						<a class="btn all-btn white-btn pull-left" ui-sref="main.equiDetails({id:pro.id})">
 							View
 						</a>
-						<a class="btn small-btn secondary-btn" ng-click="edit(pro)" class="text">
+						<a class="btn all-btn white-btn" ng-click="edit(pro)" class="text">
 							Edit
 						</a>
-						<a ng-click="delete(pro)" class="btn small-btn secondary-btn pull-right">
+						<a ng-click="delete(pro)" class="btn all-btn white-btn pull-right">
 							Delete
 						</a>
 					</div>
