--- a/src/app/views/seller-account/inquiries/list/list.html
+++ b/src/app/views/seller-account/inquiries/list/list.html
@@ -2,7 +2,7 @@
     <img src="assets/images/loader.gif" style="height: 100px; width:100px"/>
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 seller-header search-col no-padding">
-	<h1 class="no-margin skin-color seller-heading-font">Enquiries</h1>
+	<h1 class="no-margin black-color seller-heading-font">Enquiries</h1>
 	<!-- <div id="sb-search" class="sb-search hidden-xs" ng-class="{'sb-search-open': searchOpen}">
 		<form>
 			<input class="sb-search-input form-control" placeholder="Search" type="text" value="" name="search" id="search" ng-class="{'no-border': !searchOpen}">
@@ -50,7 +50,7 @@
 			</div>
 		</div>
 	</div> -->
-	<table class="table order-table">
+	<table class="table order-table hidden-xs">
 		<tbody>
 			<tr ng-repeat="item in mdl.items">
 				<td>
@@ -60,10 +60,18 @@
 					<p class="no-margin heading-text orange-text font-italic">{{item.subject}}</p>
 				</td>
 				<td class="text-right">
-					<button class="btn small-btn view-btn secondary-btn" ui-sref="main.sellerAccount.inquiries.view({id:item.id})">View</button>
+					<button class="btn all-btn view-btn white-btn" ui-sref="main.sellerAccount.inquiries.view({id:item.id})">View</button>
 					<a href="" class="desc-text orange-text btn-right">Mark as read</a>
 				</td>
 			</tr>
 		</tbody>
 	</table>
+	<div class="col-xs-12 no-padding visible-xs">
+		<div class="col-xs-12 no-padding mobile-inquiry-list" ng-repeat="item in mdl.items">
+			<p class="heading-text">Jessica Brown</p>
+			<p class="heading-text orange-text font-italic">{{item.subject}}</p>
+			<button class="btn all-btn view-btn white-btn pull-left" ui-sref="main.sellerAccount.inquiries.view({id:item.id})">View</button>
+			<a href="" class="desc-text orange-text pull-right">Mark as read</a>
+		</div>
+	</div>
 </div>
