--- a/src/app/views/seller-account/invoices/view/view.html
+++ b/src/app/views/seller-account/invoices/view/view.html
@@ -13,9 +13,9 @@
 		<hr />
 	</div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding term-description">
-		<p class="heading-text no-margin">Order number: &nbsp
-			<span class="no-margin" ng-if="mdl.invoice.order.id">{{mdl.invoice.order.id}}</span>
-			<span class="no-margin" ng-if="!mdl.invoice.order.id">--</span>
+		<p class="font14 no-margin">Order number: &nbsp
+			<span class="no-margin bold-font" ng-if="mdl.invoice.order.id">{{mdl.invoice.order.id}}</span>
+			<span class="no-margin bold-font" ng-if="!mdl.invoice.order.id">--</span>
 		</p>
 	</div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
@@ -56,13 +56,13 @@
 				<p>Quantity <span class="pull-right">3</span></p>
 			</div>
 			<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 right-col">
-				<p>Shipping <span class="pull-right">$100</span></p>
-				<p>Overuse <span class="pull-right">$178</span></p>
-				<p>Additional <span class="pull-right">$230</span></p>
+				<p>Shipping <span class="pull-right bold-font">$100</span></p>
+				<p>Overuse <span class="pull-right bold-font">$178</span></p>
+				<p>Additional <span class="pull-right bold-font">$230</span></p>
 			</div>
 		</div>
 		<div class="col-lg-1 col-md-1 col-sm-2 col-xs-12 product-name pull-center product-name-xs no-padding">
-			<h4>$1200</h4>
+			<h4 class="bold-font">$1200</h4>
 		</div>
 	</div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding devider-solid no-margin"></div>
@@ -72,13 +72,13 @@
 				<h4 style="margin-top: 28px;">Cart Total</h4>
 			</div>
 	 	</div>
-	 	<div class="col-lg-3 col-md-3 col-sm-4 col-xs-12 add-cost">
-	 		<p>Shipping Cost <span class="pull-right">$50</span></p>
-	 		<p>Overusage <span class="pull-right">$215</span></p>
-	 		<p>Additional <span class="pull-right">${{mdl.item.additional_charge}}</span></p>
+	 	<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 add-cost">
+	 		<p>Shipping Cost <span class="pull-right bold-font">$50</span></p>
+	 		<p>Overusage <span class="pull-right bold-font">$215</span></p>
+	 		<p>Additional <span class="pull-right bold-font">${{mdl.item.additional_charge}}</span></p>
 	 	</div>
-	 	<div class="col-lg-3 col-md-3 col-sm-4 col-xs-12 total-cost">
-			<div>
+	 	<div class="col-lg-3 col-md-3 col-sm-2 col-xs-12 total-cost">
+			<div class="bold-font">
 				${{mdl.item.total}}
 			</div>
 		</div>
