--- a/src/app/views/seller-account/settings/general/general.html
+++ b/src/app/views/seller-account/settings/general/general.html
@@ -5,6 +5,6 @@
 	<form novalidate name="generalMdl.form" validate-form class="general-setting">
 		<label class="inline-block">Minimum Contract Period</label>
 		<input required name="minimumContract" ng-model="generalMdl.minimumContractPeriod" type="text" class="form-control inline-block" placeholder="number of days"> Days &nbsp
-		<button ladda="buttonLoader" class="btn small-btn secondary-btn" ng-click="generalMdl.save()">Save</button>
+		<button ladda="buttonLoader" class="btn all-btn white-btn" ng-click="generalMdl.save()">Save</button>
 	</form>
 </div>
