--- a/src/app/style/sass/style.scss
+++ b/src/app/style/sass/style.scss
@@ -5390,6 +5390,14 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; }
       transition: background-color 0.6s ease;
       &:hover {
         background-color: #f5f5f5;
+        td {
+          p {
+            a {
+              background-color: $primary-orange-color;
+              color: $white-theme-color;
+            }
+          }
+        }
       }
       &:first-child {
         border-top: 1px solid #cccccc;
@@ -6165,7 +6173,7 @@ section {
       }
     }
     span {
-      font-weight: 400;
+      // font-weight: 400;
     }
   }
 }
