--- a/src/app/views/account/orders/list/list.html
+++ b/src/app/views/account/orders/list/list.html
@@ -32,7 +32,8 @@
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
 	<table class="table order-table hidden-xs">
 		<tbody>
-			<tr ng-repeat="order in mdl.orders| filter:{ id : mdl.searchText} " >
+			<tr ng-repeat="order in mdl.orders| filter:{ id : mdl.searchText} | dateRangeFilter:  myDateRange.startDate: myDateRange.endDate
+" >
 				<td>
 					<p class="heading-text no-margin">
 						<i class="icon soap-icon-card yellow-color circle"></i>&nbsp Order
