--- a/src/app/views/equi-details/equi-details.html
+++ b/src/app/views/equi-details/equi-details.html
@@ -296,7 +296,7 @@
             <div class="table-cell col-sm-8">
                 <div class="detailed-rating">
                     <ul class="clearfix">
-                        <li class="col-md-6">
+                        <li class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
                             <div class="each-rating"><label>service</label>
 
                                 <div class="five-stars-container">
@@ -304,7 +304,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="col-md-6">
+                        <li class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
                             <div class="each-rating"><label>ease of renting</label>
 
                                 <div class="five-stars-container">
@@ -312,7 +312,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="col-md-6">
+                        <li class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
                             <div class="each-rating"><label>after rent support</label>
 
                                 <div class="five-stars-container">
@@ -320,7 +320,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="col-md-6">
+                        <li class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
                             <div class="each-rating"><label>brochure</label>
 
                                 <div class="five-stars-container">
@@ -328,7 +328,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="col-md-6">
+                        <li class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
                             <div class="each-rating"><label>request processing</label>
 
                                 <div class="five-stars-container">
@@ -336,7 +336,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="col-md-6">
+                        <li class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
                             <div class="each-rating"><label>timely delivery</label>
 
                                 <div class="five-stars-container">
@@ -344,7 +344,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="col-md-6">
+                        <li class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
                             <div class="each-rating"><label>ease of payment</label>
 
                                 <div class="five-stars-container">
@@ -352,7 +352,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="col-md-6">
+                        <li class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
                             <div class="each-rating"><label>Overall</label>
 
                                 <div class="five-stars-container">
@@ -501,10 +501,10 @@
         </div>
     </div>
     <div ng-show="mdl.tab2=='write-review'" ng-class="{'fade in active':mdl.tab2=='write-review'}" class="tab-pane" >
-        <div class="main-rating table-wrapper full-width hidden-table-sms intro">
-            <article class="image-box box hotel listing-style1 photo table-cell col-sm-4">
+        <div class="main-rating full-width intro col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
+            <article class="image-box box hotel listing-style1 photo col-lg-4 col-md-12 col-sm-12 col-xs-12 no-mdpadding">
                 <figure>
-                    <a class="hover-effect" title=""  ><img width="270" height="160" alt=""
+                    <a class="hover-effect equip-review-img" title=""  ><img width="270" height="160" alt=""
                                                                    src="http://placehold.it/270x160"></a>
                 </figure>
                 <div class="details no-lpadding">
@@ -518,10 +518,9 @@
                     </div>
                 </div>
             </article>
-            <div class="table-cell col-sm-8">
-                <div class="overall-rating">
+            <div class="col-lg-8 col-md-12 col-sm-12 col-xs-12 no-mdpadding">
+                <div class="overall-rating no-lpadding no-rpadding no-tpadding">
                     <h4>Your overall Rating of this Equipment</h4>
-
                     <div class="star-rating clearfix">
                         <div class="five-stars-container big-font">
                             <div class="five-stars" style="width: 80%;"></div>
@@ -530,7 +529,7 @@
                     </div>
                     <div class="detailed-rating">
                         <ul class="clearfix">
-                            <li class="col-md-6">
+                            <li class="col-lg-6 col-md-12 col-sm-12 col-xs-12 no-mdpadding">
                                 <div class="each-rating"><label>service</label>
 
                                     <div class="five-stars-container">
@@ -538,7 +537,7 @@
                                     </div>
                                 </div>
                             </li>
-                            <li class="col-md-6">
+                            <li class="col-lg-6 col-md-12 col-sm-12 col-xs-12 no-mdpadding">
                                 <div class="each-rating"><label>ease of renting</label>
 
                                     <div class="five-stars-container">
@@ -546,7 +545,7 @@
                                     </div>
                                 </div>
                             </li>
-                            <li class="col-md-6">
+                            <li class="col-lg-6 col-md-12 col-sm-12 col-xs-12 no-mdpadding">
                                 <div class="each-rating"><label>after rent support</label>
 
                                     <div class="five-stars-container">
@@ -554,7 +553,7 @@
                                     </div>
                                 </div>
                             </li>
-                            <li class="col-md-6">
+                            <li class="col-lg-6 col-md-12 col-sm-12 col-xs-12 no-mdpadding">
                                 <div class="each-rating"><label>brochure</label>
 
                                     <div class="five-stars-container">
@@ -562,7 +561,7 @@
                                     </div>
                                 </div>
                             </li>
-                            <li class="col-md-6">
+                            <li class="col-lg-6 col-md-12 col-sm-12 col-xs-12 no-mdpadding">
                                 <div class="each-rating"><label>request processing</label>
 
                                     <div class="five-stars-container">
@@ -570,7 +569,7 @@
                                     </div>
                                 </div>
                             </li>
-                            <li class="col-md-6">
+                            <li class="col-lg-6 col-md-12 col-sm-12 col-xs-12 no-mdpadding">
                                 <div class="each-rating"><label>timely delivery</label>
 
                                     <div class="five-stars-container">
@@ -578,7 +577,7 @@
                                     </div>
                                 </div>
                             </li>
-                            <li class="col-md-6">
+                            <li class="col-lg-6 col-md-12 col-sm-12 col-xs-12 no-mdpadding">
                                 <div class="each-rating"><label>ease of payment</label>
 
                                     <div class="five-stars-container">
@@ -586,7 +585,7 @@
                                     </div>
                                 </div>
                             </li>
-                            <li class="col-md-6">
+                            <li class="col-lg-6 col-md-12 col-sm-12 col-xs-12 no-mdpadding">
                                 <div class="each-rating"><label>Overall</label>
 
                                     <div class="five-stars-container">
@@ -599,7 +598,8 @@
                 </div>
             </div>
         </div>
-        <form class="review-form">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
+            <form class="review-form">
             <div class="form-group col-md-12 no-float no-padding write-review-div">
                 <h4 class="title">Title of your review</h4>
                 <input type="text" name="review-title" class="form-control" value=""
@@ -660,8 +660,8 @@
             <div class="form-group col-md-5 col-xs-12 no-float no-padding no-margin">
                 <button type="submit" class="btn all-btn full-width primary-btn">Submit Review</button>
             </div>
-        </form>
-
+            </form>
+        </div>
     </div>
     </div>
 
@@ -734,7 +734,7 @@
         <h4>Need Help or Support?</h4>
 
         <p>We would be more than happy to help you. Our team advisor are 24/7 at your service to help you.</p>
-        <address class="contact-details">
+        <address class="contact-details equi-contact">
             <span class="contact-phone"><i class="soap-icon-phone"></i> 1-800-123-MKTPLACE</span>
             <br>
             <a class="contact-email">help@marketplace.com</a>
