--- a/src/app/style/sass/responsive.scss
+++ b/src/app/style/sass/responsive.scss
@@ -370,6 +370,16 @@
       }
     }
   }
+  .no-mdpadding {
+    padding: 0 !important;
+  }
+  .equip-review-img {
+    text-align: center;
+    img {
+      max-width: 350px;
+      display: inline-block !important;
+    }
+  }
 }
 
 /* 5. Styles for devices(<=991px ) */
